[package]
name = "meros"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}
x86_64 = "0.14.2"

[build-dependencies]
compiler_builtins = { version = "0.1", features = ["mem"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
build-command = ["build"]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-nographic"]
test-success-exit-code = 33
test-timeout = 300

